[package]
name = "monotree"
version = "0.1.4"
authors = ["Francis Lim <thyeem@gmail.com>", "Jongwhan Lee <leejw51@gmail.com>"]
edition = "2018"
description = "Rust implementation of an optimized Sparse Merkle Tree"
repository = "https://github.com/thyeem/monotree"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["sparse", "merkle", "radix", "blockchain", "merkletrie"]
categories = ["algorithms", "data-structures", "cryptography::cryptocurrencies"]

[dependencies]
rand = "0.7.3"
hex = "0.4.1"
num = "0.2.1"
hashbrown = "0.7"
blake2-rfc = "0.2.18"
blake3 = "0.2.2"
digest = "0.8.1"
sha2 = "0.8.1"
sha3 = "0.8.2"
rocksdb = { version = "0.13.0", optional = true }
sled = { version = "0.31.0", optional = true }
scopeguard = "1.1.0"
paste = "0.1.7"

[dev-dependencies]
criterion = "0.3"

[features]
default = []
db_rocksdb = ["rocksdb"]
db_sled = ["sled"]

[[bench]]
name = "benchmark"
harness = false
