[package]
name = "monotree"
version = "0.3.0"
authors = ["Taeho Francis Lim <thyeem@gmail.com>", "Jongwhan Lee <leejw51@gmail.com>"]
edition = "2021"
description = "Rust implementation of an optimized Sparse Merkle Tree"
repository = "https://github.com/thyeem/monotree"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/monotree"
homepage = "https://github.com/thyeem/monotree"
keywords = ["sparse", "merkle", "radix", "blockchain", "merkletrie"]
categories = ["algorithms", "data-structures", "cryptography::cryptocurrencies"]

[dependencies]
rand = "0.8.5"
hex = "0.4.3"
num = "0.4.3"
hashbrown = "0.15"
blake2-rfc = "0.2.18"
blake3 = "1.5.5"
digest = "0.10.7"
sha2 = "0.10.8"
sha3 = "0.10.8"
rocksdb = { version = "0.23.0", optional = true }
sled = { version = "0.34.7", optional = true }
scopeguard = "1.2.0"
paste = "1.0.15"

[dev-dependencies]
criterion = "0.5"

[features]
default = []
db_rocksdb = ["rocksdb"]
db_sled = ["sled"]

[[bench]]
name = "benchmark"
harness = false
